デザインの変更と検索の追加

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
     "date-fns": "^2.16.1",
+    "fuse.js": "^6.4.3",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-google-analytics": "^2.7.0",
@@ -24,6 +25,8 @@
     "gatsby-source-filesystem": "^2.7.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "graphql-tag": "^2.11.0",
+    "js-search": "^2.0.0",
+    "lunr": "^2.3.9",
     "node-fetch": "^2.6.1",
     "pleasejs": "^0.4.2",
     "postcss": "^8.1.10",
