--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "apollo-link-http": "^1.5.17",
     "date-fns": "^2.16.1",
     "fuse.js": "^6.4.3",
-    "gatsby": "^2.26.1",
+    "gatsby": "2.29.0",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-canonical-urls": "^2.7.0",
     "gatsby-plugin-google-analytics": "^2.7.0",
