--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "cross-fetch": "^3.0.6",
     "date-fns": "^2.16.1",
     "fuse.js": "^6.4.3",
     "gatsby": "2.29.0",
