--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@bumped-inc/gatsby-plugin-optional-chaining": "^1.0.0",
-    "@tarekraafat/autocomplete.js": "^8.2.1",
+    "@tarekraafat/autocomplete.js": "7.2.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
@@ -42,6 +42,7 @@
     "purgecss": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-infinite": "^0.13.0",
     "react-infinite-scroll-component": "^5.1.0",
