--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@bumped-inc/gatsby-plugin-optional-chaining": "^1.0.0",
-    "@tarekraafat/autocomplete.js": "7.2.0",
+    "@tarekraafat/autocomplete.js": "^8.2.1",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
@@ -22,6 +22,7 @@
     "gatsby-plugin-google-analytics": "^2.7.0",
     "gatsby-plugin-html2amp": "^1.4.1",
     "gatsby-plugin-manifest": "^2.6.1",
+    "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-postcss": "^3.2.0",
     "gatsby-plugin-purgecss": "^5.0.0",
