--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "react-helmet": "^6.1.0",
     "react-infinite": "^0.13.0",
     "react-infinite-scroll-component": "^5.1.0",
+    "react-share": "^4.3.1",
     "react-slick": "^0.27.13",
     "react-youtube": "^7.13.0",
+    "recharts": "^2.0.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.0.1",
     "vanilla-autokana": "^1.1.6"
